Bugfix: notion-toggle 내부 element overflow 해결

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -13,6 +13,10 @@
   @apply my-1;
 }
 
+.notion-toggle{
+  @apply w-full !important;
+}
+
 .notion-list li {
   @apply py-0;
 }
